# literature-study-pipeline

./: .gitignore  README.md  abstract_scaper.py  abstract_scraper.py  abstract_scraper_vinc.py  content_packager.py  criteria_assessment.py  db_interface.ipynb  filter_papers_on_criteria.py  llm_processor.py  main.py  paper_interpreter.py  paper_scraper.py  pyproject.toml  solve_cnf.py  study_design.json  study_input.json  study_runner.py  test.py
abstract_scraper/: file_utility.py  main.py  parser.py  scraper.py
alt/: perplexity_scraper.py
data/: papers.csv
database/: additional_models.py  db_manager.py  models.py
paper_extraction/: dblp_parser.py  factory.py  http_requests.py  sch_wrapper.py  web_scraper.py
schemas/: criteria_assessment_schema.json  study_input_schema.json
tests/: model_test.py  solve_cnf_test.py
utils/: file_io.py  json_utils.py  text_parsing.py  text_parsing_utils.py
