[tool.poetry]
name = "literature-study-pipeline"
version = "0.1.0"
description = "This project is meant to assist in the process of making a structured literature study"
authors = ["andrei-calin-dragomir <andrei.calin.dragomir@gmail.com>"]
readme = "README.md"
packages = [{include = "literature_study_pipeline"}]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.34.0"
bs4 = "^0.0.2"
lxml = "^5.2.2"
pandas = "^2.2.2"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
