[tool.poetry]
name = "literature-study-pipeline"
version = "0.1.0"
description = "This project is meant to assist in the process of making a structured literature study"
authors = ["andrei-calin-dragomir <andrei.calin.dragomir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9, <3.13"
openai = "^1.34.0"
bs4 = "^0.0.2"
lxml = "^5.2.2"
pandas = "^2.2.2"
requests = "^2.32.3"
selenium = "^4.22.0"
python-dotenv = "^1.0.1"
aspose-pdf = "^24.6.0"
jsonschema = "^4.22.0"
semanticscholar = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
